# clean-code

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/controlleur/: authentification.rs
src/entity/: authentification.rs
src/service/: authentification.rs  database.rs  mod.rs
